--- a/gaussian-process.ipynb
+++ b/gaussian-process.ipynb
@@ -16,6 +16,14 @@
     "## Gaussian Process Regression (GPR)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "https://www.robots.ox.ac.uk/~mebden/reports/GPtutorial.pdf"
+   ]
   }
  ],
  "metadata": {
