--- a/04_bayesian-linear-regression.ipynb
+++ b/04_bayesian-linear-regression.ipynb
@@ -23,11 +23,24 @@
    "source": [
     "# Linear Regression Model\n",
     "\n",
-    "Gaussian Noise를 갖고 있는 linear regression model은 다음과 같습니다.\n",
+    "Standard linear regression model은 다음과 같습니다.\n",
     "\n",
-    "$$ \\mathbf{Y} = \\mathbf{X} \\beta + \\epsilon $$\n",
+    "$$ f(\\mathbf{x}) = \\mathbf{x}^T \\mathbf{w} $$\n",
     "\n",
-    "Matrix의 형태로 보면 다음과 같습니다.\n",
+    "Bias weight (intercept) 는 $ \\mathbf{x} $ 에 element 1을 추가함으로서 포함될수 있습니다. <br>\n",
+    "여기서 observed value $ y $ 와 $ f(\\mathbf{x}) $ 는 additive noise $ \\epsilon $ 많큼 다르다고 가정합니다.<br>\n",
+    "\n",
+    "$$ y = f(\\mathbf{x}) + \\epsilon $$\n",
+    "\n",
+    "\n",
+    "또한 해당 noise $ \\epsilon $ 는 mean 0 그리고 variance $ \\sigma^2_n $ 를 갖은 i.i.d. (identically independent distributed) gaussian distribution을 따른다고 가정합니다.\n",
+    "\n",
+    "$$ \\epsilon \\sim \\mathscr{N}(0, \\sigma^2_n) $$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -304,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
